answers all questions in Assignment 5

--- a/Assignment_5_SWE.tex
+++ b/Assignment_5_SWE.tex
@@ -18,25 +18,85 @@
 \maketitle
 \section*{Review Questions}
 \begin{enumerate}
+
+    %Question 1
     \item List the four core values of XP.
+    \begin{enumerate}
+        \item Frequent communication between team members and with the customer
+        \item Simplicity in design and code
+        \item Feedback at many levels, Unit tests and continuous integration provide feedback to the individual developer, or pair of developers. Also, small iterations provide customer feedback. 
+        \item Courage to implement hard but necessary decisions. One possible decision is to not use XP, if it does not seem appropriate for the project. 
+    \end{enumerate}
     
-    \item List five XP practices
+    %Question 2
+    \item List five XP practices.
+    \begin{enumerate}
+        %1
+        \item \textit{Planning:} Quickly determine the features to be included in the next release, using a combination of business priorities and technical estimates.
+        %2
+        \item \textit{Short Releases:} Try to get a working system quickly, and then release new versions in a very short cycle. Typical releases are 2--4 weeks. After a release, a customer runs its tests to see whether the new features actually work and provides immediate feedback to the team. New, detailed plans are made for the next release.
+        %3
+        \item \textit{Metaphor:} Instead of a formal architecture, use a metaphor as a simple common vision of how the whole system works. It is simple, so everybody understands it and can use it to guide their design. However, this is easier said than done. Design styles and metaphors are difficult to come up with.
+        %4
+        \item \textit{Simple Design:} Try to keep the design of the system as simple as possible. Eliminate unnecessary complexity as soon as your discover it. Do not complicate the design based on things that may be needed in the future, but choose the simplest solution that works now. The design may be changed in the future, if necessary.
+        %5
+        \item \textit{Test-Driven Development:} Ensure that testing is done continuously and is automated as much as possible. Write unit tests for all code. In certain situations, test-first development is actually performed. Write the tests before you write the actual code. Keep running tests all the time. Ask customers to write functional acceptance tests to verify when features are finished. Continue to keep these tests running after they run the first time.
+    \end{enumerate}
     
+    %Question 3
     \item What factors does the Crystal family consider when choosing a methodology?
+    \begin{itemize}
+        \item Use larger methodologies for larger items
+        \item Use heavier methodologies for more critical projects
+        \item Give preference to lighter methodologies, because weight is costly. 
+        \item Give preference to interactive, face-to-face communication rather than formal, written documentation
+        \item Understand that people vary within a team and with time. People tend to be inconsistent. High-discipline processes are harder to adopt and more likely to be abandoned. 
+        \item Assume that people want to be good citizens; the can take initiative and communicate informally. Use these characteristics in your project. 
+        \end{itemize}
     
-    \item Explain some of the characteristics of Agile methodologies
+    \newpage
+    %Question 4
+    \item Explain some of the characteristics of Agile methodologies.
+    \begin{itemize}
+    \item Agile methodologies are flexible and focused on gathering as much of the information, such as requirements, towards the beginning of the software lifecycle. It involved separating the people involved into three categories, the \textit{product owner}, the {scrum master}, and the {development team}. The \textit{scrum master} is in charge of keeping everyone else on track and ensures \textit{Scrum} is followed.
+    \end{itemize}
     
+    %Question 5
     \item Compare and contrast Agile and traditional methods. 
+    \begin{itemize}
+        \item Agile processes preach incremental design with short releases and iterations. Agile focuses heavily on requirements gathering towards the beginning of the life cycle versus other traditional methods that involve the user with every step. It does not require extensive, heavy, non-layman documentation for every process. 
+    \end{itemize}
     
-    \item True or False, Agile methods prefer working programs over comprehensive documentation?
+    %Question 6
+    \item \textit{True or False}, Agile methods prefer working programs over comprehensive documentation?
+    \begin{itemize}
+    \item \textit{True}
+    \end{itemize}
     
-    \item True or False, Agile methods prefer rigid processes over adapting to the people?
+    %Question 7
+    \item \textit{True or False}, Agile methods prefer rigid processes over adapting to the people?
+    \begin{itemize}
+    \item \textit{False}
+    \end{itemize}
     
+    %Question 8
     \item What is test-driven programming, and which Agile process advocates it?
+    \begin{itemize}
+        \item Test driven programming/development ensures that testing is done continuously and is automated as much as possible. Unit tests are written for all code. the Extreme Programming (XP) process advocates it.
+    \end{itemize}
     
+    %Question 9
     \item What is the Kanban method modeled after?
+    \begin{itemize}
+     \item The Toyota Production System for Lean Manufacturing
+    \end{itemize}
     
-    \item When we "pull" in software development process, what are we pulling?
+    %Question 10
+    \item When we ``pull" in software development process, what are we pulling?
+    \begin{itemize}
+    \item We are pulling interrelated modules, meaning we are focusing on developing those modules instead of waiting around for the development of those modules to happen.
+    \end{itemize}
+    
 \end{enumerate}
     
 \end{document}
