added all of the rest of the answers

--- a/Assignment_6_SWE.tex
+++ b/Assignment_6_SWE.tex
@@ -75,6 +75,13 @@
     
     \item Explain in an ER diagram the relationship between programmers and modules where a programmer may write several modules and each module may also be written by several programmers.
     
+    \begin{figure}[H]
+        \centering
+        \includegraphics{ER}
+    \end{figure}
+    Many or one programmers can create and work on many or one modules, so all the ER Diagram calls for is this simple relation.
+    
+    
     \item What are the four types of requirements traceability?
     \begin{itemize}
         \item Backward \textit{from} traceablility: Links the requirement to the document source or the person who created it.
