adds questions for Assignment 7

--- a/UCRA_Application.tex
+++ b/UCRA_Application.tex
@@ -62,8 +62,8 @@ The users' ability to recall and execute the commands are scored by the investig
 \newline\newline 
 Our project team is comprised of five college seniors and one college junior. We are all seeking Bachelor's degrees in Computer Science, with two of us looking into User Interface Engineering specifically.
 
-\subsection*{Project References}
-Ramadan, R.A., Refat, S., Elshahed, M.A., and Ali, R.A. (2015). Chapter 2: Basics of Brain Computer Interface. \textit{Brain-Computer Interfaces}, 31--48
+%\subsection*{Project References}
+%Ramadan, R.A., Refat, S., Elshahed, M.A., and Ali, R.A. (2015). Chapter 2: Basics of Brain Computer Interface. \textit{Brain-Computer %Interfaces}, 31--48
 
 \subsection*{Project Funding Description}
 I began researching under the supervision of Dr. Sarah North in August of 2018, and through her guidance and support I have been able to reach over 50 participants in a couple short months. 
