final version of UCRA application

--- a/Assignment_7_SWE.tex
+++ b/Assignment_7_SWE.tex
@@ -20,12 +20,10 @@
     
     \item Explain the role of requirements in architectural design. Explain the role of requirements in detail design. 
     \begin{itemize}
-        \item[] The function and nonfunction requirements along with the technical considerations provide most of the drive for the architecture. 
+        \item The function and nonfunction requirements along with the technical considerations provide most of the drive for the architecture. 
     \end{itemize}
 
     \item What does aggregation mean in OO? Give an example.
-
-    
 
     \item When we employ the technique of generalization in design, what are we doing, and which part of OO design is closely related to this concept?
 
