--- a/UCRA_Application.tex
+++ b/UCRA_Application.tex
@@ -17,10 +17,18 @@
 \textbf{Faculty Member E-mail:} snorth@kennesaw.edu \newline
 \textbf{Faculty Member Department:} Computer Science 
 
-\subsection*{Faculty Member Interest (400 Words Maximum):} 
+\section*{Faculty Member Interest} 
+My primary philosophy of research and mentoring students for over 2 decades has been subscribing to student-centered education: believing that for the students to learn, the students must be comfortable in the learning environment, allowing students to freely engage in research project activities in a variety of contemporary technologies.  I believe effective research and mentoring undergraduate students must respect the learner’s self-concept and self-efficacy.  To be effective, mentors must care deeply about their learners and be committed to the whole person, while striving for a balance between challenging people to do their best and nurturing their efforts to be successful.
+\newline \newline
+I have mentored over 60 undergraduate students in building skills and conducting mainstream research. This has included STEM NSF/LSAMP, Capstone students, and High School Internships, and I have also been directly involved with several undergraduate students in their research projects at KSU. Since my residency at KSU, I have written and submitted three proposals mentoring undergraduate students on research in collaborative efforts with CS colleagues submitted to the NSF, CARET, and Mentor-Protégé.  
+\newline\newline
+We were able to publish two of those projects: DRIP–Data Rich, Information Poor: A Concise Synopsis of Data Mining, Universal Journal of Management, Horizon Research Publishing, USA, 2015, and CS++: Expending CS Curriculum via Open Cybersecurity Courseware at 2014 51st ACM-Southeast Conference. The CARET and Mentor-Protégé proposals, entitled “A Study on Malicious Android Applications,” were not accepted due to the limited CSM acceptance rating of 30\% funding; however, in both the CARET and Mentor-Protégé projects, a few students collaborated with us and had their research published in peer-reviewed journals and conference proceedings, including the 15th IEEE International Symposium on High Assurance Systems Engineering (HASE), International Journal of Secure Software Engineering (IJSSE), and International Journal of Network Security & Its Applications (IJNSA). 
+\newline \newline
+The most recent student publication was in April, 2018, “Performances Analysis of Brain-Computer Interface in Aerial Drone”, Annual ACM Southeast Conference, 2018 ACMSE Conference, and received the first place award at the CCSE Capstone project presentation.
+\newline \newline
+We  are  currently  building  on  the  research  project  from  the  team  I  mentored  last  year.  The research team has surveyed and collected data from over 50 participants, and has begun to draft models to identify differences in the ability to control a 3D Graphic using recorded brain function.  I am excited to see my students grow and learn more about the research process and become invested in a group project.
 
-
-\section*{Student Impact(400 Words Max):}
+\section*{Student Impact}
 The current UCRA applicant, Harriet (Harry) Haisty, is the project manager on an ongoing brain-computer interface research project that utilizes the Emotiv EPOC+\texttrademark and accompanying software. This project began in August, 2018, and has gained traction, already receiving over fifty research participants. Harriet has been involved heavily in the data collection and interpretation, spending long hours at the school in order to get as many participants as possible. 
 \newline \newline
 This is one of the first projects completed by a college research team that uses the Emotiv EPOC+\texttrademark headsets, and has given tremendous insight so far into the possibilities offered by such a revolutionary technology. The headset used in this project is designed to read signals from the brain of the user, and has incredible potential to allow improved quality of life for people with limited mobility. Collecting data in large quantities allows the research team to analyze various dichotomies within the user population. 
@@ -31,13 +39,13 @@ The current objective of this project is to collect enough data to draw a positi
 
 
 
-\subsection*{Student Information}
+\section*{Student Information}
 \textbf{Student Name:} Harriet Haisty \newline
 \textbf{Student E-mail:} hhaisty@students.kennesaw.edu \newline
 \textbf{Student Department:} Computer Science \newline
 \textbf{Graduation Date:} December 2019
 
-\section*{Project Description(350-500 Words):}
+\section*{Project Description}
 "Non Invasive BCI [Brain Control Interface] Devices are considered the safest type and low[est]-cost type of devices." (Ramadan, Refat, Elshahed & Ali, 2015). This non-invasive headset uses a conductive saline liquid to soak felt pads, which are connected to a gold-plated sensor on the headset. This send a continuous signal back to the software, and detects fluctuations in brain activity. It is able to detect changes in mood and facial expressions. Most importantly, this device can assign user-specified brain activity to certain tasks. This means that the interface is customizable, and that users can continue to retrain the device and record enough activity to get a successful mental command assigned to a specific task. 
 \newline \newline
 We begin by having the research participants sign a consent form, allowing us to use and publish their data. We then move on to a brief survey, which asks for their gender identity, their Major, their College, and their age. 
@@ -62,8 +70,8 @@ The users' ability to recall and execute the commands are scored by the investig
 \newline\newline 
 Our project team is comprised of five college seniors and one college junior. We are all seeking Bachelor's degrees in Computer Science, with two of us looking into User Interface Engineering specifically.
 
-%\subsection*{Project References}
-%Ramadan, R.A., Refat, S., Elshahed, M.A., and Ali, R.A. (2015). Chapter 2: Basics of Brain Computer Interface. \textit{Brain-Computer %Interfaces}, 31--48
+\subsection*{Project References}
+Ramadan, R.A., Refat, S., Elshahed, M.A., and Ali, R.A. (2015). Chapter 2: Basics of Brain Computer Interface. \textit{Brain-Computer Interfaces}, 31--48
 
 \subsection*{Project Funding Description}
 I began researching under the supervision of Dr. Sarah North in August of 2018, and through her guidance and support I have been able to reach over 50 participants in a couple short months. 
@@ -80,7 +88,7 @@ In addition to repairing the equipment we are using for this research, we would 
 \end{figure}
 
 I am also applying for UCRA funding so that my team and I may submit and present our research and paper to different conferences and competitions so that we may represent Kennesaw State University. This research is useful to developers for non-invasive Brain-Computer Interface devices, and could go a long way in providing understanding of consistent user success.
-
+\newpage
 \subsection*{Justification}
 \begin{enumerate}
     \item Emotiv EPOC+ Felt Sensor Replacements: \$79.95
