--- a/Assignment_7_SWE.tex
+++ b/Assignment_7_SWE.tex
@@ -18,24 +18,50 @@
     \section*{Review Questions}
     \begin{enumerate}
     
+     %DONE
     \item Explain the role of requirements in architectural design. Explain the role of requirements in detail design. 
     \begin{itemize}
-        \item The function and nonfunction requirements along with the technical considerations provide most of the drive for the architecture. 
+        \item[] The function and nonfunctional requirements along with the technical considerations provide most of the drive for the architecture. 
     \end{itemize}
 
     \item What does aggregation mean in OO? Give an example.
+    \begin{itemize}
+        \item[] 
+    \end{itemize}
 
     \item When we employ the technique of generalization in design, what are we doing, and which part of OO design is closely related to this concept?
+    \begin{itemize}
+      \item[]   
+    \end{itemize}
 
-    \item List two differences between the state transition diagram and the sequence diagram?
-
+    \item List two differences between the state transition diagram and the sequence diagram.
+    \begin{enumerate}
+        \item[] 
+        \item[]     
+    \end{enumerate}
+   
+    %DONE
     \item Describe three different views used in architectural design. 
+    \begin{enumerate}
+        \item[] Logical views -- represents the relationship between classes (Object Oriented View)
+        \item[] Process views -- represents the runtime components and how they interact with eachother
+        \item[] Subsystem decomposition -- represents the modules and subsystems, joined with export and import relations
+    \end{enumerate}
 
+    %DONE
     \item What is the difference between data modeling and logical database deisgn?
+    \begin{itemize}
+        \item[] Data Modeling is creating an ER model, and Logical Database Design is taking in input as a detailed ER model and and producing a normalized, relational schema.
+    \end{itemize}
 
-    \item Describe the difference between low-fidelity and high-fidelity prototypinbg in the design of the interface. Choose one and give the reasons whu you should show the client this prototype. 
+    %DONE
+    \item Describe the difference between low-fidelity and high-fidelity prototyping in the design of the interface. Choose one and give the reasons why you should show the client this prototype. 
+    \begin{itemize}
+        \item[] I would show a high-fidelity prototype to the consumer, it is a more polished form instead of a hand-drawn design. I would use a low-fidelity model to base my high-fidelity model
+        off of. I think it is more professional, if time allows, to present a basic interface so that the consumer has a better idea of what they are buying.
+    \end{itemize}
 
-    \item Explain the three columns in Figure 7.26 labeled User, Screen Output, and Process with refard to design. 
+    \item Explain the three columns in Figure 7.26 labeled User, Screen Output, and Process with regard to design. 
 
     \item Choose one of the cognitive models and explain how the model impacts the design of the user interface. 
 
