--- a/Assignment_7_SWE.tex
+++ b/Assignment_7_SWE.tex
@@ -15,29 +15,32 @@
     
     \begin{document}
     \maketitle
-    \section*{Review Questions}
+    \s ection*{Review Questions}
     \begin{enumerate}
     
-     %DONE
+    %DONE
     \item Explain the role of requirements in architectural design. Explain the role of requirements in detail design. 
     \begin{itemize}
         \item[] The function and nonfunctional requirements along with the technical considerations provide most of the drive for the architecture. 
     \end{itemize}
 
+    %DONE
     \item What does aggregation mean in OO? Give an example.
     \begin{itemize}
-        \item[] 
+        \item[] Aggregates are parts of a larger object. For example, if there is a class called \textit{Car}, then it might be comprised of objects such as \textit{engine} 
+        and \textit{wheel}.
     \end{itemize}
 
     \item When we employ the technique of generalization in design, what are we doing, and which part of OO design is closely related to this concept?
     \begin{itemize}
-      \item[]   
+      \item[] 
     \end{itemize}
 
+    %DONE
     \item List two differences between the state transition diagram and the sequence diagram.
     \begin{enumerate}
-        \item[] 
-        \item[]     
+        \item[] A state chart covers a larger span than the sequence diagram.
+        \item[] A sequence diagram is designed to describe one particular function.    
     \end{enumerate}
    
     %DONE
@@ -49,7 +52,7 @@
     \end{enumerate}
 
     %DONE
-    \item What is the difference between data modeling and logical database deisgn?
+    \item What is the difference between data modeling and logical database design?
     \begin{itemize}
         \item[] Data Modeling is creating an ER model, and Logical Database Design is taking in input as a detailed ER model and and producing a normalized, relational schema.
     \end{itemize}
@@ -63,7 +66,13 @@
 
     \item Explain the three columns in Figure 7.26 labeled User, Screen Output, and Process with regard to design. 
 
+    %DONE
     \item Choose one of the cognitive models and explain how the model impacts the design of the user interface. 
+    \begin{itemize}
+        \item Norman developed a model in 1988 that was based on the psychology of everyday actions. He developed a model with 7 different stages. This impacts the design of the system because you
+        need to know the \textit{goals} and \textit{expectations} of the users. You should then cater your design to the goals and expectations of the user. 
+    \end{itemize}
+
 
     \item Visit a website that is from a different country or culture. Give an example of a multicultural 
     issue you found on their site. Explain how you would propose to redesign, taking into consideration the issue found. 
