--- a/Assignment_7_SWE.tex
+++ b/Assignment_7_SWE.tex
@@ -2,8 +2,10 @@
 
     \usepackage[utf8]{inputenc}
     \usepackage{listings}
+    \usepackage{kotex}
     \usepackage{color}
     \usepackage{float}
+    \usepackage{hyperref}
     \usepackage{geometry}
     \geometry{a4paper}
     \geometry{margin = .5in}
@@ -15,16 +17,14 @@
     
     \begin{document}
     \maketitle
-    \s ection*{Review Questions}
+    \section*{Review Questions}
     \begin{enumerate}
     
-    %DONE
     \item Explain the role of requirements in architectural design. Explain the role of requirements in detail design. 
     \begin{itemize}
         \item[] The function and nonfunctional requirements along with the technical considerations provide most of the drive for the architecture. 
     \end{itemize}
 
-    %DONE
     \item What does aggregation mean in OO? Give an example.
     \begin{itemize}
         \item[] Aggregates are parts of a larger object. For example, if there is a class called \textit{Car}, then it might be comprised of objects such as \textit{engine} 
@@ -33,17 +33,16 @@
 
     \item When we employ the technique of generalization in design, what are we doing, and which part of OO design is closely related to this concept?
     \begin{itemize}
-      \item[] 
+      \item[] We are making associations between classes based on their commonalitites, and we then identify a common superclass for them. 
+      This is most closely related to the OO concept of Logical View.
     \end{itemize}
 
-    %DONE
     \item List two differences between the state transition diagram and the sequence diagram.
     \begin{enumerate}
         \item[] A state chart covers a larger span than the sequence diagram.
         \item[] A sequence diagram is designed to describe one particular function.    
     \end{enumerate}
    
-    %DONE
     \item Describe three different views used in architectural design. 
     \begin{enumerate}
         \item[] Logical views -- represents the relationship between classes (Object Oriented View)
@@ -51,13 +50,11 @@
         \item[] Subsystem decomposition -- represents the modules and subsystems, joined with export and import relations
     \end{enumerate}
 
-    %DONE
     \item What is the difference between data modeling and logical database design?
     \begin{itemize}
         \item[] Data Modeling is creating an ER model, and Logical Database Design is taking in input as a detailed ER model and and producing a normalized, relational schema.
     \end{itemize}
 
-    %DONE
     \item Describe the difference between low-fidelity and high-fidelity prototyping in the design of the interface. Choose one and give the reasons why you should show the client this prototype. 
     \begin{itemize}
         \item[] I would show a high-fidelity prototype to the consumer, it is a more polished form instead of a hand-drawn design. I would use a low-fidelity model to base my high-fidelity model
@@ -65,18 +62,27 @@
     \end{itemize}
 
     \item Explain the three columns in Figure 7.26 labeled User, Screen Output, and Process with regard to design. 
+    \begin{itemize}
+        \item[] \textbf{First column } \textit{First:} this shows the user's interaction with the system.
+        \item[] \textbf{Second Column } \textit{Second:} this shows the the two visual outputs, and shows the person's usage of the dropbox function.
+        \item[] \textbf{Third Column } \textit{Third:} the inner-workings of the program are shown in the thirs column as a sequence diagram. This column checks to make sure that the students have 
+        the necessary prerequisites for the course they are attempting to take. 
+        \end{itemize}
 
-    %DONE
     \item Choose one of the cognitive models and explain how the model impacts the design of the user interface. 
     \begin{itemize}
-        \item Norman developed a model in 1988 that was based on the psychology of everyday actions. He developed a model with 7 different stages. This impacts the design of the system because you
+        \item[] Norman developed a model in 1988 that was based on the psychology of everyday actions. He developed a model with 7 different stages. This impacts the design of the system because you
         need to know the \textit{goals} and \textit{expectations} of the users. You should then cater your design to the goals and expectations of the user. 
     \end{itemize}
 
-
     \item Visit a website that is from a different country or culture. Give an example of a multicultural 
     issue you found on their site. Explain how you would propose to redesign, taking into consideration the issue found. 
-    
+    \begin{itemize}
+        \item[] I chose \ https://namu.wiki/w/식사하는\%20철학자\%20문제, which is a Korean version of Wikipedia. It is a very well-organized website, and has a very logical layout. 
+        The only issue with the website is that the direct translation of the words is very literal, and some of the higher concepts can be lost in translation. I would work on 
+        refining the translation algorithms, so that the higher-level concepts aren't lost when they are translated into a second language.
+        
+    \end{itemize}
     \end{enumerate}
     
     \end{document}
