--- a/Lab_7_Accompanying_Document.tex
+++ b/Lab_7_Accompanying_Document.tex
@@ -86,7 +86,7 @@ The generic type template was able to take in a doubl, and int, or another value
 \section*{The Output}
 \begin{figure}[h]
 \centering
-\includegrpahics[width = 10cm]{_____}
+\includegraphics[width = 15cm]{lab_7_1}
 \caption {output for part 1}
 \end{figure}
 
