--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -24,6 +24,7 @@
 \end{enumerate}
 
 \item In code inspection, what would you set as the condition(e.g., how many discovered defects) for reinspection?
+%comment comment comment
 
 \item List the four techniques discussed to perform verification and validation?
 
