--- a/Assignment_10_SWE.tex
+++ b/Assignment_10_SWE.tex
@@ -25,6 +25,7 @@
 
 \item In code inspection, what would you set as the condition(e.g., how many discovered defects) for reinspection?
 %comment comment comment
+%comment comment comment
 
 \item List the four techniques discussed to perform verification and validation?
 
